option('cli', type: 'boolean', value: true,
    description: 'Build the CLI')
option('experimental', type: 'boolean', value: true,
    description: 'Build the experimental parts of HSE')
option('tests', type: 'boolean', value: true,
    description: 'Build and enable tests')
option('ycsb', type: 'boolean', value: false,
    description: 'Build JNI bridge artifacts')
option('db_bench', type: 'boolean', value: true,
    description: 'Build db_bench')
option('tools', type: 'feature', value: 'auto',
    description: 'Build tools')
option('install-tools', type: 'boolean', value: false,
    description: 'Install tools')
option('samples', type: 'boolean', value: true,
    description: 'Build samples')
option('bindings', type: 'array', choices: ['all', 'none', 'python'], value: ['all'],
    description: 'Build language bindings')
option('docs', type: 'boolean', value: false,
    description: 'Build documentation')
option('omf-byte-order', type: 'combo', choices: ['native', 'big', 'little'],
    value: 'native', description: 'On-media-format byte order')
