option('cli', type: 'boolean', value: true,
    description: 'Build the CLI')
option('experimental', type: 'boolean', value: true, yield: true,
    description: 'Build the experimental parts of HSE')
option('tests', type: 'boolean', value: true,
    description: 'Build and enable tests')
option('db_bench', type: 'boolean', value: true,
    description: 'Build db_bench')
option('tools', type: 'feature', value: 'auto',
    description: 'Build tools')
option('samples', type: 'boolean', value: true,
    description: 'Build samples')
option('bindings', type: 'array', choices: ['all', 'none', 'auto', 'java', 'python'], value: ['auto'],
    description: 'Build language bindings')
option('docs', type: 'feature', value: 'auto',
    description: 'Build documentation')
option('omf-byte-order', type: 'combo', choices: ['native', 'big', 'little'],
    value: 'native', description: 'On-media-format byte order')
option('rpath', type: 'boolean', value: false,
    description: 'Add an RPATH to executables upon install')
option('pmem', type: 'feature', value: 'auto',
    description: 'Include PMEM support')
