[tool.poetry]
name = "hse"
version = "2.0.0"
description = "Fast key-value storage for SSDs and persistent memory"
authors = ["Micron Technology, Inc."]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "20.8b1"
Cython = "^0.29.23"
gcovr = "^4.2"
meson = "^0.58.0"
ninja = "^1.10.0"
pytest-tap = "^3.2"
toml = "^0.10.2"
