[tool.poetry]
name = "hse"
version = "2.0.0"
description = "Fast key-value storage for SSDs and persistent memory"
authors = ["Micron Technology, Inc."]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
PyYAML = { version = "^5.4.1", optional = true }
pytest = "^6.2.4"
black = "20.8b1"
Cython = "^0.29.23"
gcovr = "^4.2"
meson = "^0.58.2"
ninja = "^1.10.0"
pytest-tap = "^3.2"
toml = "^0.10.2"
requests-unixsocket = { version = "^0.2.0", optional = true }
bokeh = { version = "^2.3.3", optional = true }

[tool.poetry.extras]
tools = ["PyYAML", "bokeh", "requests-unixsocket"]
